--- a/passageiro.html
+++ b/passageiro.html
@@ -1,25 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Passageiro - Buscar Motorista</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
+
 <body class="bg-gray-100">
   <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold text-center mb-4">Passageiro - Buscar Motorista</h1>
     <div id="status" class="text-center mb-4">🔄 Buscando motoristas...</div>
     <div id="map" class="h-96 w-full rounded-lg shadow mb-4"></div>
     <ul id="drivers-list" class="mb-4"></ul>
-    <button id="call-driver" class="hidden w-full bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">Chamar Taxista</button>
+    <button id="call-driver" class="hidden w-full bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">
+      Chamar Taxista
+    </button>
   </div>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script src="app.js"></script>
-  <script>document.addEventListener('DOMContentLoaded', initializePassenger);</script>
+
+  <!-- Script do mapa -->
+  <script>
+    function initializePassenger() {
+      const map = L.map('map').setView([-15.793889, -47.882778], 13); // Brasília como centro inicial
+
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+      }).addTo(map);
+
+      if (!navigator.geolocation) {
+        document.getElementById('status').textContent = 'Geolocalização não suportada.';
+        return;
+      }
+
+      navigator.geolocation.getCurrentPosition(
+        (position) => {
+          const lat = position.coords.latitude;
+          const lng = position.coords.longitude;
+
+          map.setView([lat, lng], 15);
+          L.marker([lat, lng]).addTo(map).bindPopup('Você está aqui').openPopup();
+
+          document.getElementById('status').textContent = '✅ Localização detectada!';
+          document.getElementById('call-driver').classList.remove('hidden');
+        },
+        () => {
+          document.getElementById('status').textContent = '❌ Não foi possível obter localização.';
+        }
+      );
+    }
+
+    document.addEventListener('DOMContentLoaded', initializePassenger);
+  </script>
 </body>
+
 </html>
