--- a/admin.html
+++ b/admin.html
@@ -36,6 +36,7 @@
   </form>
   <div id="map"></div>
 
+  <!-- Scripts -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -56,27 +57,37 @@
       const comentario = document.getElementById('comentario').value.trim();
       let lat, lng;
 
-      if (endereco.includes(',')) {
-        // Coordenadas diretas
-        [lat, lng] = endereco.split(',').map(Number);
-      } else {
-        // Buscar via Nominatim
-        const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(endereco)}`;
-        const res = await fetch(url);
-        const data = await res.json();
-        if (!data[0]) return alert('Endereço não encontrado');
-        lat = parseFloat(data[0].lat);
-        lng = parseFloat(data[0].lon);
+      try {
+        if (endereco.includes(',')) {
+          [lat, lng] = endereco.split(',').map(Number);
+        } else {
+          const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(endereco)}`;
+          const res = await fetch(url);
+          const data = await res.json();
+          if (!data[0]) return alert('Endereço não encontrado');
+          lat = parseFloat(data[0].lat);
+          lng = parseFloat(data[0].lon);
+        }
+
+        const ref = db.ref('marcadores').push();
+        await ref.set({ lat, lng, titulo, comentario });
+
+        // Exibe local no mapa e centraliza
+        const marker = L.marker([lat, lng])
+          .addTo(map)
+          .bindPopup(`<b>${titulo}</b><br>${comentario}<br><button onclick="removerMarcador('${ref.key}')">🗑 Excluir</button>`)
+          .openPopup();
+
+        map.setView([lat, lng], 17);
+        alert('✅ Marcador adicionado!');
+        form.reset();
+
+      } catch (error) {
+        alert('Erro ao adicionar marcador.');
+        console.error(error);
       }
-
-      const ref = db.ref('marcadores').push();
-      ref.set({ lat, lng, titulo, comentario });
-
-      alert('Marcador adicionado!');
-      form.reset();
     });
 
-    // Carregar marcadores já existentes
     db.ref('marcadores').on('value', snap => {
       map.eachLayer(layer => {
         if (layer instanceof L.Marker) map.removeLayer(layer);
@@ -84,19 +95,19 @@
 
       const dados = snap.val() || {};
       Object.entries(dados).forEach(([key, m]) => {
-        const marker = L.marker([m.lat, m.lng]).addTo(map)
+        L.marker([m.lat, m.lng])
+          .addTo(map)
           .bindPopup(`<b>${m.titulo}</b><br>${m.comentario}<br><button onclick="removerMarcador('${key}')">🗑 Excluir</button>`);
       });
     });
 
-    // Remover marcador
     function removerMarcador(key) {
-      if (confirm('Deseja excluir este marcador?')) {
+      if (confirm('Deseja mesmo excluir este marcador?')) {
         db.ref(`marcadores/${key}`).remove();
       }
     }
 
-    window.removerMarcador = removerMarcador; // Deixa acessível no popup
+    window.removerMarcador = removerMarcador;
   </script>
 </body>
 
